pkg_includedir = ${prefix}/include/${PACKAGE_NAME}

pkg_include_HEADERS = \
    StlContainerUtil.h \
    miClock \
    miClock.h \
    miCommandLine.h \
    miDate \
    miDate.h \
    miDirtools.h \
    miRing.h \
    miSort.h \
    miString \
    miString.h \
    miTime \
    miTime.h \
    minmax.h \
    puAlgo.h \
    puMathAlgo.h \
    ttycols.h

INSTALL=install -p #tells install to preserve timestamp
